--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "New Portflio website whaddup",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack src/app.js -o public/bundle.js"
   },
   "author": "Taylor Steele",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^26.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
-  }
+  },
+  "dependencies": {}
 }
