--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -13,4 +13,4 @@ test_pull_request:
         node-version: 12
     - run: npm ci
     - run: npm test
-    - run: npm run build`
+    - run: npm run build
