--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -1,16 +1,17 @@
-name: CI
+name: Node Continuous Integration
 
 on:
   pull_request:
     branches: [master]
 
-test_pull_request:
-  runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
-      with:
-        node-version: 12
-    - run: npm ci
-    - run: npm test
-    - run: npm run build
+jobs:
+  test_pull_request:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - run: npm ci
+      - run: npm test
+      - run: npm run build
