--- a/package.json
+++ b/package.json
@@ -14,5 +14,7 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
-  "dependencies": {}
+  "dependencies": {
+    "shufflejs": "^5.2.3"
+  }
 }
